class_blog_jpa_v1/src/main/java/com/example/demo/common/errors/Exception404.java
package com.example.demo.common.errors;

public class Exception404 extends RuntimeException {

	public Exception404(String msg) {
		super();
	}
}
